[project]
name = "porlock"
dynamic = ["version"]
description = "Find unwanted visitors by analyzing behavior"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "David Graves", email = "dgraves@thesummitgrp.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
django = [
    "django>=3.2"
]