# setup.cfg
[metadata]
name = porlock
version = 0.0.1
description = Find unwanted visitors by analyzing log files for series of events
long_description = file:README.md
url = https://github.com/dgravitate/porlock
license = MIT

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    poetry

[options.packages.find]
exclude =
    test*
    Dockerfile
    Makefile
    docker*
